<resources>
    <string name="app_name">Money Tracker</string>


    <string name="title_please_wait">Please Wait …</string>

    <!--bottom navigation menu-->
    <string name="home">Home</string>
    <string name="chart">Chart</string>
    <string name="category">Category</string>
    <string name="profile">Profile</string>

    <!--activity_register-->
    <string name="username">Name</string>
    <string name="signup_welcome_txt">Please SignUp to Continue</string>
    <string name="already_have_account_sign_in">Already have an account? </string>
    <string name="conform_password">ConfirmPassword</string>

    <!--activity_login-->
    <string name="welcome_txt">Welcome Back! Please SignIn to Continue</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account_sign_up">Don\'t have an account? </string>
    <string name="sign_up"> Sign Up</string>

    <!--activity_otp-->
    <string name="otp">OTP</string>
    <string name="welcome_otp_text">Please Enter The OTP Send To</string>
    <string name="verify_otp">Verify</string>
    <string name="enter_code">Enter Code</string>
    <string name="resend">Resend Otp</string>

    <!--OtpActivity-->
    <string name="enter_otp">Please enter otp</string>
    <string name="valid_digit">Please enter 6 digit otp</string>

    <!--edit_category_dialog-->
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="category_name">Category Name</string>

    <!--activity_transaction_detail-->
    <string name="select_category">Select category</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="remark">Remark</string>


</resources>