<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item android:id="@+id/menu_chart"
        android:enabled="true"
        android:visible="true"
        android:icon="@drawable/ic_chart"
        android:title="@string/chart"/>
    <item android:id="@+id/menu_category"
        android:enabled="true"
        android:visible="true"
        android:icon="@drawable/ic_category"
        android:title="@string/category"/>
    <item android:id="@+id/menu_profile"
        android:enabled="true"
        android:visible="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>
</menu>