<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="transacctionDetailViewModel"
            type="com.nchl.moneytracker.presentation.dashboard.transaction.TransactionDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/tracker_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageButton
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@color/tracker_green"
                android:padding="8dp"
                android:src="@drawable/ic_back_button" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/iv_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/tracker_green"
                android:padding="8dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_white_delete" />


        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <RadioGroup
                android:id="@+id/rvCategoryOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingStart="0dp"
                android:paddingLeft="0dp">

                <RadioButton
                    android:id="@+id/expenseRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:text="Expense" />

                <RadioButton
                    android:id="@+id/incomeRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="Income" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Select Date"
                        android:textColor="@color/black"></TextView>

                    <RelativeLayout
                        android:id="@+id/layout_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_button_bg"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="8dp">

                        <ImageView
                            android:id="@+id/dateIcon"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentLeft="true"
                            android:src="@drawable/ic_calendar"></ImageView>

                        <TextView
                            android:id="@+id/selectedDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="5dp"
                            android:layout_toEndOf="@+id/dateIcon"
                            android:text="April 2022"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"></TextView>


                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Select Time"
                        android:textColor="@color/black"></TextView>

                    <RelativeLayout
                        android:id="@+id/layout_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_button_bg"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="8dp">

                        <ImageView
                            android:id="@+id/timeIcon"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentLeft="true"
                            android:src="@drawable/ic_time"></ImageView>

                        <TextView
                            android:id="@+id/selectedTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="5dp"
                            android:layout_toEndOf="@+id/timeIcon"
                            android:text="2:00 PM"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"></TextView>


                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_category_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/select_category"
                app:hintTextColor="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_et_category_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:focusable="false"
                    android:gravity="top|left"
                    android:inputType="none"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_transaction_amount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/transaction_amount"
                app:hintTextColor="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_et_transaction_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:inputType="number"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_transaction_remark"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/remark"
                app:hintTextColor="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_et_transaction_remark"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="top|left"
                    android:inputType="text"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="end"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/value_medium"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/nexa_bold"
                    android:text="@string/action_cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nexa_bold"
                    android:text="@string/action_confirm"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>